# LEX

./: .gitignore
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  agents.py  main.py  supabase_client.py
backend/app/routers/: simulation.py  trial.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/courtroom/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/chunks/app/courtroom/: page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/static/webpack/: webpack.9a2948ba6a0eed96.hot-update.js  webpack.d8928de8d0961761.hot-update.js
frontend/.next/static/webpack/app/: layout.d8928de8d0961761.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/.next/types/app/courtroom/: page.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/courtroom/: page.tsx
